# Crm-Django

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
crm_project/crm_project/: settings.py  urls.py
crm_project/web_crm/: apps.py  forms.py  models.py  urls.py  views.py
crm_project/web_crm/migrations/: 0001_initial.py
crm_project/web_crm/templates/: home.html  navbar.html  record.html
django_crm/django_crm/: settings.py
