[tool.poetry]
name = "crm-django"
version = "0.1.0"
description = ""
authors = ["Thiago Xavier <thiago.xavieraguilar1@gmail.com>"]
readme = "README.md"
packages = [{include = "crm_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
