[tool.poetry]
name = "crm-django"
version = "0.1.0"
description = ""
authors = ["Thiago Xavier <thiago.xavieraguilar1@gmail.com>"]
readme = "README.md"
packages = [{include = "crm_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
mysql-connector-python = "^8.0.33"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mysqlclient = "^2.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
